<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/txtChangePasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_page_title"
        android:textColor="@color/persian_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtChangePasswordSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password_page_subtitle"
        android:textColor="@color/gray"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/txtChangePasswordTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtChangePasswordTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputOldPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/old_password"
        app:boxStrokeColor="@color/persian_blue"
        app:hintTextColor="@color/persian_blue"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/txtChangePasswordSubtitle"
        app:layout_constraintStart_toStartOf="@+id/txtChangePasswordSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/txtChangePasswordSubtitle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputOldPassword"
            android:inputType="textPassword"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:hint="@string/new_password"
        app:boxStrokeColor="@color/persian_blue"
        app:hintTextColor="@color/persian_blue"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/layoutInputOldPassword"
        app:layout_constraintStart_toStartOf="@+id/layoutInputOldPassword"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputOldPassword">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputNewPassword"
            android:inputType="textPassword"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputConfirmNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:layout_marginTop="17dp"
        app:boxStrokeColor="@color/persian_blue"
        app:hintTextColor="@color/persian_blue"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/layoutInputNewPassword"
        app:layout_constraintStart_toStartOf="@+id/layoutInputNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputNewPassword">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/persian_blue"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="@+id/layoutInputConfirmNewPassword"
        app:layout_constraintStart_toStartOf="@+id/layoutInputConfirmNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/layoutInputConfirmNewPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>