<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LandingPageActivity"
    android:backgroundTint="@color/white">
    <ImageView
        android:id="@+id/imageLandingPage"
        android:layout_width="309dp"
        android:layout_height="309dp"
        android:src="@drawable/landing_page_image"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/txtLandingPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/persian_blue"
        app:layout_constraintTop_toBottomOf="@id/imageLandingPage"
        app:layout_constraintStart_toStartOf="@id/imageLandingPage"
        app:layout_constraintEnd_toEndOf="@id/imageLandingPage"/>
    <TextView
        android:id="@+id/txtLandingPageSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_subtitle"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/txtLandingPageTitle"
        app:layout_constraintEnd_toEndOf="@id/txtLandingPageTitle"
        app:layout_constraintTop_toBottomOf="@id/txtLandingPageTitle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:cornerRadius="14dp"
            android:backgroundTint="@color/persian_blue"/>
        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/persian_blue"
            app:cornerRadius="14dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/persian_blue"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>