<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/persian_blue">

    <ImageView
        android:id="@+id/iconBack"
        android:layout_width="20dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="268dp"
        android:layout_height="426dp"
        android:background="@drawable/container_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginTop="58dp"
            android:src="@drawable/icon_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" 
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Username"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageUser" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textAlignment="center"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtUsername" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangePassword"
            style="@style/Widget.Material3.Button.Icon"
            app:icon="@drawable/icon_changepassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/persian_blue"
            app:cornerRadius="10dp"
            android:text="@string/change_password"
            app:layout_constraintBottom_toTopOf="@+id/btnDeleteAccount"
            app:layout_constraintEnd_toEndOf="@+id/btnDeleteAccount"
            app:layout_constraintStart_toStartOf="@+id/btnDeleteAccount" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeleteAccount"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            app:icon="@drawable/icon_delete"
            android:text="@string/delete_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cornerRadius="10dp"
            app:strokeColor="@color/danger"
            app:iconTint="@color/danger"
            android:textColor="@color/danger"
            app:layout_constraintBottom_toTopOf="@+id/btnLogout"
            app:layout_constraintEnd_toEndOf="@+id/btnLogout"
            app:layout_constraintStart_toStartOf="@+id/btnLogout" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            app:icon="@drawable/icon_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cornerRadius="10dp"
            app:strokeColor="@color/danger"
            app:iconTint="@color/danger"
            android:textColor="@color/danger"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>